Fixed the logo and now they are visible

--- a/src/styles/Aboutus.css
+++ b/src/styles/Aboutus.css
@@ -103,8 +103,8 @@
   }
   /* Update the Android Club logo size */
 .acwoc-link img {
-    width: 20px;
-    height: 20px;
+    width: 50px;
+    height: 50px;
     object-fit: contain;
   }
   
